--- a/src/tests/Makefile
+++ b/src/tests/Makefile
@@ -1,5 +1,5 @@
 CC = g++
-CFLAGS = -Wall -g
+CFLAGS = -Wall -g -D XCP_STATIC_NETWORK -D MPXCP_VERSION_1
 CRT="`pwd`"
 INCLUDE= -I/$(CRT)/.. -I$(CRT) -I/$(CRT)/../starlink
 #-I$(CRT)/ksp -I$(CRT)/ksp/boost
