--- a/src/starlink/Makefile
+++ b/src/starlink/Makefile
@@ -1,5 +1,5 @@
 CC = g++
-CFLAGS = -Wall -g -D XCP_STATIC_NETWORK -D MPXCP_VERSION_1
+CFLAGS = -Wall -std=c++11 -g -D XCP_STATIC_NETWORK -D MPXCP_VERSION_1
 CRT="`pwd`"
 INCLUDE= -I/$(CRT)/.. -I$(CRT) 
 #-I$(CRT)/ksp -I$(CRT)/ksp/boost
